Remove scrollbar on ChatPage, fix shadow on ChatHeader

--- a/packages/web/src/pages/chat-page/ChatPage.module.css
+++ b/packages/web/src/pages/chat-page/ChatPage.module.css
@@ -13,6 +13,11 @@
   height: calc(100% + 37px);
 }
 
+/* Remove header box shadow (use our own in ChatHeader */
+.page > div:first-child > * {
+  box-shadow: none;
+}
+
 .pageHeaderOverride > div > div {
   margin: 0;
 }
