--- a/packages/web/src/pages/chat-page/components/ChatHeader.module.css
+++ b/packages/web/src/pages/chat-page/components/ChatHeader.module.css
@@ -2,6 +2,8 @@
   display: flex;
   height: 112px;
   margin-left: -15px;
+  margin-right: -15px;
+  background: var(--neutral-light-10);
   box-shadow: 1px 2px 5px rgba(133, 129, 153, 0.25);
 }
 
